--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,9 +1,13 @@
 \documentclass[11pt,a4paper,polish,thesis]{dcsbook}
 
+\usepackage{indentfirst}
 \usepackage{babel}
 \usepackage{float}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
+
+\usepackage{color}
+\newcommand{\JP}[1]{\textcolor{red}{#1}}
 
 \newfloat{Code}{htbp}{myc}
 
