thesis: specification: one backslash too many

--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -80,7 +80,7 @@ Rozszerzenia
 \item Po otwarciu programu ponownie wtyczka widoczna jest na liście aktywnych dodatków Eclipse.
 \end{enumerate}
 \section{Wymagania pozafunkcjonalne}
-\JP{Może zamiast \subsection zrobić describe? Wydaje mi się, że teraz wizualnie to słabo wygląda. Tak poza tym: to są wymagania, które ma spełnić oprogramowanie, więc nie można pisać, że "są w pełni zrealizowane". Zdania w czasie przeszłym mogą pojawić się dopiero w podsumowaniu.}
+\JP{Może zamiast subsection zrobić describe? Wydaje mi się, że teraz wizualnie to słabo wygląda. Tak poza tym: to są wymagania, które ma spełnić oprogramowanie, więc nie można pisać, że "są w pełni zrealizowane". Zdania w czasie przeszłym mogą pojawić się dopiero w podsumowaniu.}
 \subsection{Funkcjonalność}
 Wtyczka \emph{GUI4PDDL} umożliwia użytkownikowi efektywne zarządzanie kodem pisanym w języku \emph{PDDL}. Pomaga w kontrolowaniu zawartości kodu. Wtyczka zbudowana jest jako jeden produkt, zgodnie ze specyfikacją wymaganą przez wtyczki programu \emph{Eclipse}. Zgodnie z polityką twórców Eclipse, \emph{GUI4PDDL} jest zbudowana w pełni modułowo, co umożliwia pełną integrację ze środowiskiem oraz jest łatwa w rozwoju. Żadne dane nie są wysyłane poza środowisko, dzięki czemu spełnia warunki bezpieczeństwa.\JP{To ostatnie zdanie chyba powinno być w jakimś oddzielnym fragmencie podpisanym bezpieczeństwo?}
 \subsection{Niezawodność}
